--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>
-      datag.host
-    </h1>
+    <div id="logo">
+      <img src="img/dataghostlogo.svg">
+    </div>
   </body>
 </html>
