--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       		c1.135,1.136,1.951,2.01,2.512,2.625c0.561,0.616,1.047,1.308,1.495,2.079c0.499,0.811,0.923,1.686,1.079,2.624
       		c0.155,0.939,0.33,2.057,0.33,3.356V48.406z"
           </div>
+          <hr>
           <div class="data">
               "M74.333,34.035C74.333,15.282,59.279,0,40.525,0C22.062,0,7.074,14.012,6.617,33.012h0.042v94.622
       		l-0.031-0.038c0,3.949-2.237,5.082-4.372,6.332C0.295,135.074,0,135.218,0,135.218l8.828,15.851l7.831-3.85v-0.002
@@ -48,17 +49,29 @@
       </div>
       <div class="col">
         <div class="padding">
-          <h1>/// VISUALS</h1>
+          <h1>
+            ////////////////////<br>
+            /// VISUALS<br>
+            ////////////////////
+          </h1>
         </div>
       </div>
       <div class="col">
         <div class="padding">
-          <h1>/// SOUNDS</h1>
+          <h1>
+            ////////////////////<br>
+            /// SOUNDS<br>
+            ////////////////////
+          </h1>
         </div>
       </div>
       <div class="col">
         <div class="padding">
-          <h1>/// ECHOES</h1>
+          <h1>
+            ////////////////////<br>
+            /// ECHOES<br>
+            ////////////////////
+          </h1>
         </div>
       </div>
     </div>
