add stuff for images

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             /// VISUALS<br>
             ////////////////////
           </h1>
+          <div class="img">
+            <img src="img/dataset.svg">
+          </div>
         </div>
       </div>
       <div class="col">
