--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <div class="img">
             <img src="img/dataset.svg">
           </div>
+          <div class="img">
+            <img src="img/wip.png">
+          </div>
         </div>
       </div>
       <div class="col">
