--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           </div>
           <div class="img">
             <img src="img/wip.png">
+            <div class="caption">
+              building the visuals of datag.host
+            </div>
           </div>
         </div>
       </div>
