add fullscreen gallery

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
+    <div id="gallery">
+      <div class="big-padding">
+        <div class="content">
+        </div>
+      </div>
+    </div>
     <div class="wrap">
       <div class="col">
         <div class="padding">
@@ -47,10 +54,10 @@
           <h1>
             _VISUALS<br>
           </h1>
-          <div class="img">
+          <div id="02" class="img">
             <img src="img/dataset.svg">
           </div>
-          <div class="img">
+          <div id="01" class="img">
             <img src="img/wip.png">
             <div class="caption">
               building the visuals of datag.host
