add open function on images

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           <h1>
             _VISUALS<br>
           </h1>
-          <div id="02" class="img">
+          <div id="02" class="img" onClick="open('02'); return false;">
             <img src="img/dataset.svg">
           </div>
-          <div id="01" class="img">
+          <div id="01" class="img" onClick="open('01'); return false;">
             <img src="img/wip.png">
             <div class="caption">
               building the visuals of datag.host
