--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <script src="js/script.js"></script>
   </head>
   <body>
+
     <div id="gallery">
       <div class="big-padding">
         <div class="content">
         </div>
       </div>
+      <div class="caption">
+      </div>
     </div>
+
     <div class="wrap">
       <div class="col">
         <div class="padding">
