--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           <h1>
             _VISUALS<br>
           </h1>
+          <div id="03" class="img">
+            <img src="img/flyer.jpg">
+          </div>
           <div id="02" class="img">
             <img src="img/dataset.svg">
           </div>
