--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
   </head>
@@ -57,7 +58,7 @@
       <div class="col">
         <div class="padding">
           <h1>
-            _VISUALS<br>
+            VISUALS<br>
           </h1>
           <div id="03" class="img">
             <img src="img/flyer.jpg">
@@ -76,14 +77,14 @@
       <div class="col">
         <div class="padding">
           <h1>
-            _SOUNDS<br>
+            SOUNDS<br>
           </h1>
         </div>
       </div>
       <div class="col">
         <div class="padding">
           <h1>
-            _ECHOES<br>
+            ECHOES<br>
           </h1>
         </div>
       </div>
