--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <h1>
             VISUALS<br>
           </h1>
+          <div id="04" class="img">
+            <img src="img/merger.png">
+          </div>
           <div id="03" class="img">
             <img src="img/flyer.jpg">
           </div>
