--- a/index.html
+++ b/index.html
@@ -21,40 +21,42 @@
       </div>
     </div>
 
-    <div class="wrap">
-      <div class="col">
-        <div class="padding">
-          <div id="logo">
-            <img src="img/dataghostlogo.svg">
+    <header id="head">
+      <div class="wrap">
+        <div id="logo">
+          <img src="img/logo_vert.svg">
+        </div>
+        <div class="col">
+          <div class="padding">
+            <div class="text">
+              A ghost made out of data,<br>
+              persistent data, <br>
+              independant from it's source.
+            </div>
           </div>
-          <div class="data">
-              "M74.333,34.035C74.333,15.282,59.279,0,40.525,0C22.062,0,7.074,14.012,6.617,33.012h0.042v94.622
-      		l-0.031-0.038c0,3.949-2.237,5.082-4.372,6.332C0.295,135.074,0,135.218,0,135.218l8.828,15.851l7.831-3.85v-0.002
-      		c0-0.07,0.594-0.144,0.767-0.229c19.213-9.645,56.88-34.616,56.774-82.506C74.153,43.094,74.333,34.652,74.333,34.035z
-      		 M30.279,51.731c0.242,0.392,0.455,0.733,0.684,1.023s0.477,0.58,0.768,0.87c0.29,0.292,0.578,0.587,0.876,0.883l-4.564,4.582
-      		c-1.216-1.217-2.087-2.112-2.606-2.686c-0.521-0.575-1.057-1.247-1.515-2.018c-0.812-1.351-1.263-3.346-1.263-5.98V32.393
+        </div>
+        <div class="col">
+          <div class="padding">
+            <div class="text">
+              An empty dataset,<br>
+              visible, <br>
+              but intangible.
+            </div>
           </div>
-          <hr>
-          <a class="link" href="https://www.instagram.com/datag.host/">
-            instagram
-          </a>
-          <hr>
-          <a class="link" href="https://soundcloud.com/datag-host">
-            soundcloud
-          </a>
-          <hr>
-          <a class="link" href="https://twitter.com/datag_host">
-            twitter
-          </a>
-          <hr>
-          <div class="data">
-              "M74.333,34.035C74.333,15.282,59.279,0,40.525,0C22.062,0,7.074,14.012,6.617,33.012h0.042v94.622
-      		l-0.031-0.038c0,3.949-2.237,5.08
-      		c1.135,1.136,1.951,2.01,2.512,2.625c0.561,0.616,1.047,1.308,1.495,2.079c0.499,0.811,0.923,1.686,1.079,2.624
-      		c0.155,0.939,0.33,2.057,0.33,3.356V48.406z"
+        </div>
+        <div class="col">
+          <div class="padding">
+            <div class="text">
+              function ghosting(){<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;return NULL <br>
+              }
+            </div>
           </div>
         </div>
       </div>
+    </header>
+
+    <div class="wrap">
       <div class="col">
         <div class="padding">
           <h1>
@@ -110,6 +112,19 @@
           <h1>
             ECHOES<br>
           </h1>
+          <div class="links">
+            <a class="link" href="https://www.instagram.com/datag.host/">
+              instagram
+            </a>
+            <hr>
+            <a class="link" href="https://soundcloud.com/datag-host">
+              soundcloud
+            </a>
+            <hr>
+            <a class="link" href="https://twitter.com/datag_host">
+              twitter
+            </a>
+          </div>
         </div>
       </div>
     </div>
