add functions to console

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             </div>
           </div>
         </div>
+        <div class="col text">
+          <div class="padding">
+            Output
+            <div id="output" class="text">
+
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
