--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="text">
               A ghost made out of data,<br>
               persistent data, <br>
-              independant from it's source.
+              independent from it's source.
             </div>
           </div>
         </div>
@@ -61,6 +61,7 @@
                 </form>
               </div>
             </div>
+            Looks like we have a badass over here.
           </div>
         </div>
         <div class="col text">
@@ -79,7 +80,7 @@
         <img src="img/logo_vert.svg">
       </div>
       <div class="wrap">
-        <div class="col">
+        <div id="visuals" class="col">
           <div class="padding">
             <h1>
               VISUALS<br>
@@ -101,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div id="sounds" class="col">
           <div class="padding">
             <h1>
               SOUNDS<br>
@@ -129,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div id="echoes" class="col">
           <div class="padding">
             <h1>
               ECHOES<br>
