fix animations on content type change and gallery add commands

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico"/>
 	  <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
@@ -57,7 +58,7 @@
               <div class="header"><span class="circle-btn"></span><span class="circle-btn"></span><span class="circle-btn"></span></div>
               <div class="window">
                 <form>
-                  <textarea></textarea>
+                  <textarea placeholder="enter your commands here"></textarea>
                 </form>
               </div>
             </div>
@@ -80,7 +81,7 @@
         <img src="img/logo_vert.svg">
       </div>
       <div class="wrap">
-        <div id="visuals" class="col">
+        <div id="visuals" class="col content-type">
           <div class="padding">
             <h1>
               VISUALS<br>
@@ -102,7 +103,7 @@
             </div>
           </div>
         </div>
-        <div id="sounds" class="col">
+        <div id="sounds" class="col content-type">
           <div class="padding">
             <h1>
               SOUNDS<br>
@@ -130,7 +131,7 @@
             </div>
           </div>
         </div>
-        <div id="echoes" class="col">
+        <div id="echoes" class="col content-type">
           <div class="padding">
             <h1>
               ECHOES<br>
