--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <h1>
               VISUALS<br>
             </h1>
+            <div id="05" class="img">
+              <img src="img/absenceofnoise-10.png">
+            </div>
             <div id="04" class="img">
               <img src="img/merger.png">
             </div>
