--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/favicon.ico"/>
 	  <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/instafeed.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
@@ -143,6 +144,7 @@
               <a class="link" href="https://www.instagram.com/datag.host/">
                 instagram
               </a>
+              <div id="instafeed"></div>
               <hr>
               <a class="link" href="https://soundcloud.com/datag-host">
                 soundcloud
