--- a/index.html
+++ b/index.html
@@ -15,47 +15,32 @@
   </head>
   <body>
 
-    <div id="gallery">
-      <div class="big-padding">
-        <div class="content">
-        </div>
-      </div>
-      <div class="caption">
-      </div>
-    </div>
-
     <header id="head">
       <div class="wrap">
         <div class="col">
           <div class="padding">
             <div class="text">
-              A ghost made out of data,<br>
-              persistent data, <br>
-              independent from it's source.
+              <div id="logo">
+                <img src="img/logo_vert.svg">
+              </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="padding">
-            <div class="text">
-              An empty dataset,<br>
-              visible, <br>
-              but intangible.
+            <div class="nav">
+              <ul>
+                <li><a href="visuals.html">visuals</a></li>
+                <li><a href="sounds.html">sounds</a></li>
+                <li><a href="echoes.html">echoes</a></li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="padding">
-            <div class="text">
-              function ghosting(){<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;return NULL <br>
-              }
-            </div>
-          </div>
-        </div>
+      </header>
+
         <div class="col-2 text">
           <div class="padding">
-            <a id="open-terminal">open terminal</a>
             <div id="terminal">
               <div class="header"><span class="circle-btn"></span><span class="circle-btn"></span><span class="circle-btn"></span></div>
               <div class="window">
@@ -76,87 +61,13 @@
           </div>
         </div>
       </div>
-    </header>
 
     <section id="content">
-      <div id="logo">
-        <img src="img/logo_vert.svg">
-      </div>
+
       <div class="wrap">
-        <div id="visuals" class="col content-type">
-          <div class="padding">
-            <h1>
-              VISUALS<br>
-            </h1>
-            <div id="05" class="img">
-              <img src="img/absenceofnoise-10.png">
-            </div>
-            <div id="04" class="img">
-              <img src="img/merger.png">
-            </div>
-            <div id="03" class="img">
-              <img src="img/flyer.jpg">
-            </div>
-            <div id="02" class="img">
-              <img src="img/dataset.svg">
-            </div>
-            <div id="01" class="img">
-              <img src="img/wip.png">
-              <div class="caption">
-                building the visuals of datag.host
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="sounds" class="col content-type">
-          <div class="padding">
-            <h1>
-              SOUNDS<br>
-            </h1>
-            <div id="05" class="sound">
-              <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/235691822&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
-                <div class="info-wrap">
-                  <div class="info">
-                    Release:<br>
-                    01 / 12 / 2015<br>
-                    23:16<br>
-                    <br>
-                    TotalTime: 02:34<br>
-                    Items: 1<br>
-                    Size: 40.8Mo
-                  </div>
-                  <h2>
-                    <hr>
-                    orb crs-3
-                    <hr>
-                  </h2>
-                </div>
-                <img src="img/orb-crs-3.jpg">
-              </a>
-            </div>
-          </div>
-        </div>
-        <div id="echoes" class="col content-type">
-          <div class="padding">
-            <h1>
-              ECHOES<br>
-            </h1>
-            <div class="links">
-              <a class="link" href="https://www.instagram.com/datag.host/">
-                instagram
-              </a>
-              <div id="instafeed"></div>
-              <hr>
-              <a class="link" href="https://soundcloud.com/datag-host">
-                soundcloud
-              </a>
-              <hr>
-              <a class="link" href="https://twitter.com/datag_host">
-                twitter
-              </a>
-            </div>
-          </div>
-        </div>
+
+
+
       </div>
     </section>
   </body>
