redesign index and add images, change behavior of terminal, restyle echoes

--- a/echoes.html
+++ b/echoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>datag.host</title>
+    <title>datag.host _ echoes</title>
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
@@ -13,37 +13,95 @@
     <script src="js/instafeed.min.js"></script>
     <script src="js/script.js"></script>
   </head>
-  <body>
+  <body class="echoes">
 
-    <div class="wrap">
-      <div id="echoes" class="col content-type">
-        <h1>
-          ECHOES
-        </h1>
-        <div id="echoes-wrapper" class="packery">
-          <div id="echo-1" class="echo packery-item">
-            <div class="padding">
-              A ghost made out of data,
-              persistent data,
-              independent from it's source.
-            </div>
+    <header id="head">
+      <div class="wrap">
+        <div class="padding">
+          <div id="logo">
+            <a href="index.html">
+              <img src="img/dataghostlogo.svg">
+            </a>
           </div>
-          <div id="echo-2" class="echo packery-item">
-            <div class="padding">
-              An empty dataset,
-              visible,
-              but intangible.
-            </div>
-          </div>
-          <div id="echo-2" class="echo packery-item">
-            <div class="padding">
-              function ghosting(){
-                  return NULL
-              }
-            </div>
+          <div class="nav">
+            <ul>
+              <li><a href="visuals.html">visuals</a></li>
+              <li><a href="sounds.html">sounds</a></li>
+              <li><a href="echoes.html">echoes</a></li>
+            </ul>
           </div>
         </div>
       </div>
+    </header>
+    
+    <div class="wrap">
+      <section id="content">
+        <div id="echoes" class="content-type">
+          <div class="padding">
+            <h1>
+              ECHOES
+            </h1>
+          </div>
+          <div id="echoes-wrapper" class="flex-wrap">
+            <div class="flex-row">
+              <div id="echo-1" class="echo flex-item text">
+                <div class="padding">
+                  A ghost made out of data,<br>
+                  persistent data,<br>
+                  independent from it's source.
+                </div>
+              </div>
+              <div id="echo-2" class="echo flex-item text">
+                <div class="padding">
+                  An empty dataset,<br>
+                  visible,<br>
+                  but intangible.
+                </div>
+              </div>
+              <div id="echo-3" class="echo flex-item text">
+                <div class="padding">
+                  function ghosting(){<br>
+                      return NULL<br>
+                  }
+                </div>
+              </div>
+              <div id="echo-4" class="echo flex-item text">
+                <div class="padding">
+                  last one
+                </div>
+              </div>
+            </div>
+            <div class="flex-row">
+              <div id="echo-1" class="echo flex-item text">
+                <div class="padding">
+                  A ghost made out of data,<br>
+                  persistent data,<br>
+                  independent from it's source.
+                </div>
+              </div>
+              <div id="echo-2" class="echo flex-item text">
+                <div class="padding">
+                  An empty dataset,<br>
+                  visible,<br>
+                  but intangible.
+                </div>
+              </div>
+              <div id="echo-3" class="echo flex-item text">
+                <div class="padding">
+                  function ghosting(){<br>
+                      return NULL<br>
+                  }
+                </div>
+              </div>
+              <div id="echo-4" class="echo flex-item text">
+                <div class="padding">
+                  last one
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
   </body>
