--- a/sounds.html
+++ b/sounds.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>datag.host</title>
+    <title>datag.host _ sounds</title>
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
@@ -13,10 +13,29 @@
     <script src="js/instafeed.min.js"></script>
     <script src="js/script.js"></script>
   </head>
-  <body>
-    <div class="wrap">
+  <body class="sounds">
 
-      <div id="sounds" class="col content-type">
+    <header id="head">
+      <div class="wrap">
+        <div class="padding">
+          <div id="logo">
+            <a href="index.html">
+              <img src="img/dataghostlogo.svg">
+            </a>
+          </div>
+          <div class="nav">
+            <ul>
+              <li><a href="visuals.html">visuals</a></li>
+              <li><a href="sounds.html">sounds</a></li>
+              <li><a href="echoes.html">echoes</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    
+    <div class="wrap">
+      <div id="sounds" class="content-type">
         <div class="padding">
           <h1>
             SOUNDS<br>
