--- a/index.html
+++ b/index.html
@@ -13,61 +13,45 @@
     <script src="js/instafeed.min.js"></script>
     <script src="js/script.js"></script>
   </head>
-  <body>
+  <body class="index">
 
     <header id="head">
       <div class="wrap">
-        <div class="col">
-          <div class="padding">
-            <div class="text">
-              <div id="logo">
-                <img src="img/logo_vert.svg">
-              </div>
-            </div>
+        <div class="padding">
+          <div id="logo">
+            <a href="index.html">
+              <img src="img/dataghostlogo.svg">
+            </a>
           </div>
-        </div>
-        <div class="col">
-          <div class="padding">
-            <div class="nav">
-              <ul>
-                <li><a href="visuals.html">visuals</a></li>
-                <li><a href="sounds.html">sounds</a></li>
-                <li><a href="echoes.html">echoes</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </header>
-
-        <div class="col-2 text">
-          <div class="padding">
-            <div id="terminal">
-              <div class="header"><span class="circle-btn"></span><span class="circle-btn"></span><span class="circle-btn"></span></div>
-              <div class="window">
-                <form>
-                  <textarea placeholder="enter your commands here"></textarea>
-                </form>
-              </div>
-            </div>
-            Looks like we have a badass over here.
-          </div>
-        </div>
-        <div class="col text">
-          <div class="padding">
-            Output
-            <div id="output" class="text">
-
-            </div>
+          <div class="nav">
+            <ul>
+              <li><a href="visuals.html">visuals</a></li>
+              <li><a href="sounds.html">sounds</a></li>
+              <li><a href="echoes.html">echoes</a></li>
+              <li><a id="toggle-terminal" href="">terminal</a></li>
+            </ul>
           </div>
         </div>
       </div>
+    </header>
 
     <section id="content">
-
+      <div id="back-visuals">
+        <img src="img/back-logo-sound.jpg">
+        <img src="img/back-glitch-1.jpg">
+        <img src="img/back-lines.jpg">
+        <img src="img/back-shift.jpg">
+      </div>
+      <div id="dots"></div>
       <div class="wrap">
-
-
-
+        <div id="terminal">
+          <div class="header"><span id="close-terminal" class="circle-btn"></span><span class="circle-btn"></span><span class="circle-btn"></span><span class="terminal-title">h()st</span></div>
+          <div class="window">
+            <form>
+              <textarea id="terminal-textarea" placeholder="enter your commands here"></textarea>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
   </body>
