--- a/sounds.html
+++ b/sounds.html
@@ -10,6 +10,7 @@
 	  <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/packery.pkgd.min.js"></script>
+    <script src="js/wavesurfer.min.js"></script>
     <script src="js/instafeed.min.js"></script>
     <script src="js/script.js"></script>
   </head>
@@ -53,8 +54,15 @@
             SOUNDS<br>
           </h1>
           <div id="05" class="sound">
-            <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/235691822&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+              <div class="cover">
+                <img src="img/orb-crs-3.jpg">
+              </div>
               <div class="info-wrap">
+                <h2>
+                  <hr>
+                  orb crs-3
+                  <hr>
+                </h2>
                 <div class="info">
                   Release:<br>
                   01 / 12 / 2015<br>
@@ -64,14 +72,15 @@
                   Items: 1<br>
                   Size: 40.8Mo
                 </div>
-                <h2>
-                  <hr>
-                  orb crs-3
-                  <hr>
-                </h2>
               </div>
-              <img src="img/orb-crs-3.jpg">
-            </a>
+              <div class="player">
+                <div id="waveform">
+
+                </div>
+                <audio controls>
+                  <source src="audio/orb-crs-3.mp3" type="audio/mpeg">
+                </audio>
+              </div>
           </div>
         </div>
       </div>
