--- a/sounds.html
+++ b/sounds.html
@@ -5,6 +5,7 @@
     <title>datag.host _ sounds</title>
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico"/>
 	  <script src="js/jquery-2.1.4.min.js"></script>
@@ -31,7 +32,7 @@
                 <li><a href="visuals.html">visuals</a></li>
                 <li><a class="active" href="sounds.html">sounds</a></li>
                 <li><a href="echoes.html">echoes</a></li>
-                <li><a id="toggle-terminal" href="">terminal</a></li>
+                <li id="terminal-button"><a id="toggle-terminal" href=""><i class="fa fa-terminal"></i>terminal</a></li>
               </ul>
             </div>
           </div>
