--- a/sounds.html
+++ b/sounds.html
@@ -76,11 +76,14 @@
               </div>
               <div class="player">
                 <div id="waveform">
-
                 </div>
-                <audio controls>
-                  <source src="audio/orb-crs-3.mp3" type="audio/mpeg">
-                </audio>
+                <div class="player-controls">
+                  <a class="play"><i class="fa fa-play"></i></a>
+                  <div class="time text">
+                    <span class="elapsed">00:00</span>
+                    <span class="left">04:00</span>
+                  </div>
+                </div>
               </div>
           </div>
         </div>
