--- a/sounds.html
+++ b/sounds.html
@@ -78,7 +78,7 @@
                 <div id="waveform">
                 </div>
                 <div class="player-controls">
-                  <a class="play"><i class="fa fa-play"></i></a>
+                  <a id="play-sound" class="play"><i class="fa fa-play"></i></a>
                   <div class="time text">
                     <span class="elapsed">00:00</span>
                     <span class="left">04:00</span>
