--- a/sounds.html
+++ b/sounds.html
@@ -83,6 +83,24 @@
                     <span class="elapsed">00:00</span>
                     <span class="left">04:00</span>
                   </div>
+                  <div class="volume">
+                    <a id="mute"><i class="fa fa-volume-up"></i></a>
+                    <div class="volume-slider">
+                      <div class="scale">
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                        <div class="tenth"> | | | |</div>
+                      </div>
+                      <input id="volume-range" type="range" min="0" max="1" step="0.02">
+                    </div>
+                  </div>
                 </div>
               </div>
           </div>
