--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
     </section>
 
     <div id="terminal">
-      <div class="header"><span id="close-terminal" class="circle-btn"></span><span class="circle-btn"></span><span class="circle-btn"></span><span class="terminal-title">h()st</span></div>
+      <div class="header">
+        <span id="close-terminal" class="circle-btn"><i class="fa fa-times"></i></span>
+        <span id="expand-terminal" class="circle-btn"><i class="fa fa-expand"></i></span>
+        <span class="terminal-title">h()st</span>
+      </div>
       <div class="window">
         <form>
           <textarea id="terminal-textarea" placeholder="enter your commands here"></textarea>
