--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="dataghost-app/assets/css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <script src="dataghost-app/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="dataghost-app/app.js"></script>
-	  <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/packery.pkgd.min.js"></script>
-    <script src="js/instafeed.min.js"></script>
-    <script src="js/script.js"></script>
+	  <script src="dataghost-app/assets/js/jquery-2.1.4.min.js"></script>
+    <script src="dataghost-app/assets/js/jquery-ui.min.js"></script>
+    <script src="dataghost-app/assets/js/packery.pkgd.min.js"></script>
+    <script src="dataghost-app/assets/js/instafeed.min.js"></script>
+    <script src="dataghost-app/assets/js/script.js"></script>
   </head>
   <body ng-app="dataghost-app" ng-class="body_class">
     <ng-include src="dataghost-app/partials/header.html"></ng-include>
