--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="dataghost-app/assets/css/style.css">
+    <link rel="stylesheet" href="dataghost-app/css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <script src="dataghost-app/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
