debug body class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="dataghost-app/assets/js/instafeed.min.js"></script>
     <script src="dataghost-app/assets/js/script.js"></script>
   </head>
-  <body ng-app="dataghost-app" ng-class="body_class">
+  <body ng-app="dataghost-app" ng-class="bodyClass">
     <ng-include src="dataghost-app/partials/header.html"></ng-include>
     <div ui-view>
 
