--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="shortcut icon" href="img/favicon.ico"/>
   </head>
   <body ng-class="bodyClass">
-    <ng-include src="header.html"></ng-include>
+    <ng-include src="dataghost-app/partials/header.html"></ng-include>
     <div ui-view>
 
     </div>
-    <ng-include src="terminal.html"></ng-include>
+    <ng-include src="dataghost-app/partials/terminal.html"></ng-include>
     <script src="dataghost-app/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="dataghost-app/app.js"></script>
