debug body class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dataghost-app/css/style.css">
     <link rel="shortcut icon" href="dataghost-app/assets/img/favicon.ico"/>
   </head>
-  <body  ng-controller="mainCtrl as main" ng-class="main.bodyClass">
+  <body ng-class="main.bodyClass">
     <ng-include src="'dataghost-app/partials/header.html'"></ng-include>
     <div ui-view>
 
