--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dataghost-app/css/style.css">
     <link rel="shortcut icon" href="dataghost-app/assets/img/favicon.ico"/>
   </head>
-  <body ng-controller="bodyCtrl as body" ng-class="{{ body.bodyClass }}">
+  <body ng-controller="bodyCtrl as body" class="{{ body.bodyClass }}">
     <ng-include src="'dataghost-app/partials/header.html'"></ng-include>
     <div ui-view>
 
