--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body ng-controller="bodyCtrl as body" class="{{ body.bodyClass }}">
     <ng-include src="'dataghost-app/partials/header.html'"></ng-include>
-    <div ui-view>
+    <div id="ui-view" ui-view>
 
     </div>
     <ng-include src="'dataghost-app/partials/terminal.html'"></ng-include>
