--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ng-include src="'dataghost-app/partials/terminal.html'"></ng-include>
     <script src="dataghost-app/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script src="dataghost-app/ng-twitter-api.min.js"></script>
     <script src="dataghost-app/app.js"></script>
     <script src="dataghost-app/controllers/bodyCtrl.js"></script>
     <script src="dataghost-app/controllers/indexCtrl.js"></script>
