--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dataghost-app/css/style.css">
     <link rel="shortcut icon" href="dataghost-app/assets/img/favicon.ico"/>
-    <script src="dataghost-app/angular.min.js"></script>
+    <script src="dataghost-app/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="dataghost-app/ng-twitter-api.min.js"></script>
     <script src="dataghost-app/wavesurfer-angular.js"></script>
