--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="dataghost-app/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="dataghost-app/ng-twitter-api.min.js"></script>
-    <script src="dataghost-app/wavesurfer-angular.js"></script>
+    <script src="dataghost-app/wavesurfer-angular.min.js"></script>
     <script src="dataghost-app/app.js"></script>
     <script src="dataghost-app/services.js"></script>
   </head>
